--- a/frontend/src/locale/messages.de.xlf
+++ b/frontend/src/locale/messages.de.xlf
@@ -1582,8 +1582,8 @@
         <note priority="1" from="description">accelerator.total-boost</note>
       </trans-unit>
       <trans-unit id="53475bdf4a94f0103f33211d02102859e9a8fe3e" datatype="html">
-        <source>LKY</source>
-        <target>LKY</target>
+        <source>XBT</source>
+        <target>XBT</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/acceleration/acceleration-stats/acceleration-stats.component.html</context>
           <context context-type="linenumber">13</context>
@@ -1612,7 +1612,7 @@
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/recent-pegs-stats/recent-pegs-stats.component.html</context>
           <context context-type="linenumber">18</context>
         </context-group>
-        <note priority="1" from="description">LKY</note>
+        <note priority="1" from="description">XBT</note>
         <note priority="1" from="meaning">shared.btc</note>
       </trans-unit>
       <trans-unit id="cf2ec414465d65ab24b354663d94d051a67e26e9" datatype="html">
@@ -2660,8 +2660,8 @@
         <note priority="1" from="description">Search Clear Button</note>
       </trans-unit>
       <trans-unit id="meta.description.liquid.assets" datatype="html">
-        <source>Explore all the assets issued on the Liquid network like L-LKY, L-CAD, USDT, and more.</source>
-        <target>Alle im Liquid-Netzwerk ausgegebenen Vermögenswerte wie L-LKY, L-CAD, USDT und mehr erkunden.</target>
+        <source>Explore all the assets issued on the Liquid network like L-XBT, L-CAD, USDT, and more.</source>
+        <target>Alle im Liquid-Netzwerk ausgegebenen Vermögenswerte wie L-XBT, L-CAD, USDT und mehr erkunden.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/assets/assets-nav/assets-nav.component.ts</context>
           <context context-type="linenumber">43</context>
@@ -2716,8 +2716,8 @@
         <note priority="1" from="description">Asset data load error</note>
       </trans-unit>
       <trans-unit id="0ae529953ee15ef7af41fe3a3c30a10de5347f34" datatype="html">
-        <source>LKY Holdings</source>
-        <target>LKY-Bestände</target>
+        <source>XBT Holdings</source>
+        <target>XBT-Bestände</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/balance-widget/balance-widget.component.html</context>
           <context context-type="linenumber">5</context>
@@ -2827,8 +2827,8 @@
         <note priority="1" from="description">mining.block-fees</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-fees" datatype="html">
-        <source>See the average mining fees earned per XBT block visualized in LKY and USD over time.</source>
-        <target>Durchschnittliche Mining-Gebühren pro XBT-Block ansehen, visualisiert in LKY und USD im Zeitverlauf.</target>
+        <source>See the average mining fees earned per XBT block visualized in XBT and USD over time.</source>
+        <target>Durchschnittliche Mining-Gebühren pro XBT-Block ansehen, visualisiert in XBT und USD im Zeitverlauf.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-fees-graph/block-fees-graph.component.ts</context>
           <context context-type="linenumber">70</context>
@@ -2888,8 +2888,8 @@
         <note priority="1" from="description">mining.block-fees-subsidy-subsidy</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-fees-subsidy" datatype="html">
-        <source>See the mining fees earned per XBT block compared to the XBT block subsidy, visualized in LKY and USD over time.</source>
-        <target>Zeige die pro XBT-Block verdienten Mining-Gebühren im Vergleich zur XBT-Block-Subvention an, visualisiert in LKY und USD über die Zeit.</target>
+        <source>See the mining fees earned per XBT block compared to the XBT block subsidy, visualized in XBT and USD over time.</source>
+        <target>Zeige die pro XBT-Block verdienten Mining-Gebühren im Vergleich zur XBT-Block-Subvention an, visualisiert in XBT und USD über die Zeit.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-fees-subsidy-graph/block-fees-subsidy-graph.component.ts</context>
           <context context-type="linenumber">79</context>
@@ -3303,8 +3303,8 @@
         <note priority="1" from="description">mining.block-rewards</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-rewards" datatype="html">
-        <source>See XBT block rewards in LKY and USD visualized over time. Block rewards are the total funds miners earn from the block subsidy and fees.</source>
-        <target>XBT-Blockbelohnungen in LKY und USD im Zeitverlauf ansehen. Blockbelohnungen sind die gesamten Gelder, die Miner aus der Blocksubvention und den Gebühren verdienen.</target>
+        <source>See XBT block rewards in XBT and USD visualized over time. Block rewards are the total funds miners earn from the block subsidy and fees.</source>
+        <target>XBT-Blockbelohnungen in XBT und USD im Zeitverlauf ansehen. Blockbelohnungen sind die gesamten Gelder, die Miner aus der Blocksubvention und den Gebühren verdienen.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-rewards-graph/block-rewards-graph.component.ts</context>
           <context context-type="linenumber">68</context>
@@ -5325,8 +5325,8 @@
         <note priority="1" from="description">liquid.non-dust-expired</note>
       </trans-unit>
       <trans-unit id="506d3b3e461d170c39745288b9ea96b9ac9b7f78" datatype="html">
-        <source>Total amount of LKY held in non-dust Federation UTXOs that have expired timelocks</source>
-        <target>Gesamtmenge an LKY, die in Nicht-Dust-Federation-UTXOs gehalten wird, deren Zeitsperre abgelaufen ist</target>
+        <source>Total amount of XBT held in non-dust Federation UTXOs that have expired timelocks</source>
+        <target>Gesamtmenge an XBT, die in Nicht-Dust-Federation-UTXOs gehalten wird, deren Zeitsperre abgelaufen ist</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/expired-utxos-stats/expired-utxos-stats.component.html</context>
           <context context-type="linenumber">5</context>
@@ -5360,8 +5360,8 @@
         <note priority="1" from="description">liquid.total-expired</note>
       </trans-unit>
       <trans-unit id="a1351919fe237825d7d5844cff22192f88bd1eb4" datatype="html">
-        <source>Total amount of LKY held in Federation UTXOs that have expired timelocks</source>
-        <target>Gesamtmenge an LKY, die in Föderations-UTXOs gehalten werden, deren Zeitsperre abgelaufen ist</target>
+        <source>Total amount of XBT held in Federation UTXOs that have expired timelocks</source>
+        <target>Gesamtmenge an XBT, die in Föderations-UTXOs gehalten werden, deren Zeitsperre abgelaufen ist</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/expired-utxos-stats/expired-utxos-stats.component.html</context>
           <context context-type="linenumber">15</context>
@@ -5534,8 +5534,8 @@
         <note priority="1" from="description">liquid.fund-redemption-tx</note>
       </trans-unit>
       <trans-unit id="4dbfcaee1d2f0308bd20b3b6b6655ba1e04330dc" datatype="html">
-        <source>LKY Address</source>
-        <target>LKY-Adresse</target>
+        <source>XBT Address</source>
+        <target>XBT-Adresse</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/recent-pegs-list/recent-pegs-list.component.html</context>
           <context context-type="linenumber">16</context>
@@ -5597,8 +5597,8 @@
         <note priority="1" from="description">liquid.unpeg</note>
       </trans-unit>
       <trans-unit id="52b32e9a8be459e6539a9b9214c2a17b23206a6c" datatype="html">
-        <source>Number of times that the Federation's LKY holdings fall below 95% of the total L-LKY supply</source>
-        <target>Häufigkeit, mit der die LKY-Bestände der Föderation unter 95 % des gesamten L-LKY-Angebots fallen</target>
+        <source>Number of times that the Federation's XBT holdings fall below 95% of the total L-XBT supply</source>
+        <target>Häufigkeit, mit der die XBT-Bestände der Föderation unter 95 % des gesamten L-XBT-Angebots fallen</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/reserves-ratio-stats/reserves-ratio-stats.component.html</context>
           <context context-type="linenumber">6</context>
@@ -5650,8 +5650,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="eb7a000cd340b44291d790f7b56f7b926edc275b" datatype="html">
-        <source>L-LKY in circulation</source>
-        <target>L-LKY im Umlauf</target>
+        <source>L-XBT in circulation</source>
+        <target>L-XBT im Umlauf</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/reserves-supply-stats/reserves-supply-stats.component.html</context>
           <context context-type="linenumber">3</context>
@@ -6402,13 +6402,13 @@
         <note priority="1" from="description">mining.fees-per-block-desc</note>
       </trans-unit>
       <trans-unit id="0705223420d290a218e4ed83bd4d904454a9cee8" datatype="html">
-        <source>LKY/block</source>
-        <target>LKY/Block</target>
+        <source>XBT/block</source>
+        <target>XBT/Block</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/reward-stats/reward-stats.component.html</context>
           <context context-type="linenumber">21</context>
         </context-group>
-        <note priority="1" from="description">LKY/block</note>
+        <note priority="1" from="description">XBT/block</note>
         <note priority="1" from="meaning">shared.btc-block</note>
       </trans-unit>
       <trans-unit id="cf3a97b1c1546b843411cfe101bc55ba2ac46bac" datatype="html">
@@ -7923,8 +7923,8 @@
         <note priority="1" from="description">liquid.federation-expired-utxos</note>
       </trans-unit>
       <trans-unit id="061051c88f1c686bcf3b40a81c8e824ef2ca7ae0" datatype="html">
-        <source>L-LKY Supply Against LKY Holdings</source>
-        <target>L-LKY-Angebot gegen LKY-Bestände</target>
+        <source>L-XBT Supply Against XBT Holdings</source>
+        <target>L-XBT-Angebot gegen XBT-Bestände</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/dashboard/dashboard.component.html</context>
           <context context-type="linenumber">184</context>
@@ -9477,8 +9477,8 @@
         <note priority="1" from="description">lightning.share</note>
       </trans-unit>
       <trans-unit id="meta.description.lightning.nodes-country-overview" datatype="html">
-        <source>See a geographical breakdown of the Lightning network: how many Lightning nodes are hosted in countries around the world, aggregate LKY capacity for each country, and more.</source>
-        <target>Zeige eine geografische Aufschlüsselung des Lightning-Netzwerks an: Wie viele Lightning-Knoten werden in Ländern auf der ganzen Welt gehostet, die gesamte LKY-Kapazität für jedes Land und mehr.</target>
+        <source>See a geographical breakdown of the Lightning network: how many Lightning nodes are hosted in countries around the world, aggregate XBT capacity for each country, and more.</source>
+        <target>Zeige eine geografische Aufschlüsselung des Lightning-Netzwerks an: Wie viele Lightning-Knoten werden in Ländern auf der ganzen Welt gehostet, die gesamte XBT-Kapazität für jedes Land und mehr.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-country-chart/nodes-per-country-chart.component.ts</context>
           <context context-type="linenumber">47</context>
@@ -9505,8 +9505,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="7032954508645880700" datatype="html">
-        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> LKY capacity</source>
-        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> LKY Kapazität</target>
+        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> XBT capacity</source>
+        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> XBT Kapazität</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-country-chart/nodes-per-country-chart.component.ts</context>
           <context context-type="linenumber">105</context>
@@ -9631,16 +9631,16 @@
         <note priority="1" from="description">lightning.top-100-isp-ln</note>
       </trans-unit>
       <trans-unit id="meta.description.lightning.nodes-per-isp" datatype="html">
-        <source>Browse the top 100 ISPs hosting Lightning nodes along with stats like total number of nodes per ISP, aggregate LKY capacity per ISP, and more</source>
-        <target>Durchsuche die Top 100 ISPs, die Lightning-Nodes hosten, zusammen mit Statistiken wie der Gesamtzahl der Knoten pro ISP, der gesamten LKY-Kapazität pro ISP und mehr</target>
+        <source>Browse the top 100 ISPs hosting Lightning nodes along with stats like total number of nodes per ISP, aggregate XBT capacity per ISP, and more</source>
+        <target>Durchsuche die Top 100 ISPs, die Lightning-Nodes hosten, zusammen mit Statistiken wie der Gesamtzahl der Knoten pro ISP, der gesamten XBT-Kapazität pro ISP und mehr</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-isp-chart/nodes-per-isp-chart.component.ts</context>
           <context context-type="linenumber">54</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3627306100664959238" datatype="html">
-        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> LKY</source>
-        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> LKY</target>
+        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> XBT</source>
+        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> XBT</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-isp-chart/nodes-per-isp-chart.component.ts</context>
           <context context-type="linenumber">164</context>
@@ -9758,8 +9758,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="meta.description.lightning.ranking.liquidity" datatype="html">
-        <source>See Lightning nodes with the most LKY liquidity deployed along with high-level stats like number of open channels, location, node age, and more.</source>
-        <target>Zeige die Lightning-Knoten mit der höchsten bereitgestellten LKY-Liquidität sowie allgemeine Statistiken wie die Anzahl der offenen Kanäle, Standort, Knotenalter und mehr.</target>
+        <source>See Lightning nodes with the most XBT liquidity deployed along with high-level stats like number of open channels, location, node age, and more.</source>
+        <target>Zeige die Lightning-Knoten mit der höchsten bereitgestellten XBT-Liquidität sowie allgemeine Statistiken wie die Anzahl der offenen Kanäle, Standort, Knotenalter und mehr.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-ranking/top-nodes-per-capacity/top-nodes-per-capacity.component.ts</context>
           <context context-type="linenumber">35</context>
