--- a/frontend/src/locale/messages.nl.xlf
+++ b/frontend/src/locale/messages.nl.xlf
@@ -1583,8 +1583,8 @@
         <note priority="1" from="description">accelerator.total-boost</note>
       </trans-unit>
       <trans-unit id="53475bdf4a94f0103f33211d02102859e9a8fe3e" datatype="html">
-        <source>LKY</source>
-        <target>LKY</target>
+        <source>XBT</source>
+        <target>XBT</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/acceleration/acceleration-stats/acceleration-stats.component.html</context>
           <context context-type="linenumber">13</context>
@@ -1613,7 +1613,7 @@
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/recent-pegs-stats/recent-pegs-stats.component.html</context>
           <context context-type="linenumber">18</context>
         </context-group>
-        <note priority="1" from="description">LKY</note>
+        <note priority="1" from="description">XBT</note>
         <note priority="1" from="meaning">shared.btc</note>
       </trans-unit>
       <trans-unit id="cf2ec414465d65ab24b354663d94d051a67e26e9" datatype="html">
@@ -2663,8 +2663,8 @@
         <note priority="1" from="description">Search Clear Button</note>
       </trans-unit>
       <trans-unit id="meta.description.liquid.assets" datatype="html">
-        <source>Explore all the assets issued on the Liquid network like L-LKY, L-CAD, USDT, and more.</source>
-        <target>Ontdek alle activa die zijn uitgegeven op het Liquid-netwerk, zoals L-LKY, L-CAD, USDT en meer.</target>
+        <source>Explore all the assets issued on the Liquid network like L-XBT, L-CAD, USDT, and more.</source>
+        <target>Ontdek alle activa die zijn uitgegeven op het Liquid-netwerk, zoals L-XBT, L-CAD, USDT en meer.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/assets/assets-nav/assets-nav.component.ts</context>
           <context context-type="linenumber">43</context>
@@ -2719,8 +2719,8 @@
         <note priority="1" from="description">Asset data load error</note>
       </trans-unit>
       <trans-unit id="0ae529953ee15ef7af41fe3a3c30a10de5347f34" datatype="html">
-        <source>LKY Holdings</source>
-        <target>LKY-holdings</target>
+        <source>XBT Holdings</source>
+        <target>XBT-holdings</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/balance-widget/balance-widget.component.html</context>
           <context context-type="linenumber">5</context>
@@ -2830,8 +2830,8 @@
         <note priority="1" from="description">mining.block-fees</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-fees" datatype="html">
-        <source>See the average mining fees earned per XBT block visualized in LKY and USD over time.</source>
-        <target>Bekijk de gemiddelde mining-kosten die per XBT-blok worden verdiend, gevisualiseerd in LKY en USD in de loop van de tijd.</target>
+        <source>See the average mining fees earned per XBT block visualized in XBT and USD over time.</source>
+        <target>Bekijk de gemiddelde mining-kosten die per XBT-blok worden verdiend, gevisualiseerd in XBT en USD in de loop van de tijd.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-fees-graph/block-fees-graph.component.ts</context>
           <context context-type="linenumber">70</context>
@@ -2891,8 +2891,8 @@
         <note priority="1" from="description">mining.block-fees-subsidy-subsidy</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-fees-subsidy" datatype="html">
-        <source>See the mining fees earned per XBT block compared to the XBT block subsidy, visualized in LKY and USD over time.</source>
-        <target>Bekijk de verdiende miningkosten per XBT-blok ten opzichte van de XBT-bloksubsidie, gevisualiseerd in LKY en USD in de loop van de tijd.</target>
+        <source>See the mining fees earned per XBT block compared to the XBT block subsidy, visualized in XBT and USD over time.</source>
+        <target>Bekijk de verdiende miningkosten per XBT-blok ten opzichte van de XBT-bloksubsidie, gevisualiseerd in XBT en USD in de loop van de tijd.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-fees-subsidy-graph/block-fees-subsidy-graph.component.ts</context>
           <context context-type="linenumber">79</context>
@@ -3306,8 +3306,8 @@
         <note priority="1" from="description">mining.block-rewards</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-rewards" datatype="html">
-        <source>See XBT block rewards in LKY and USD visualized over time. Block rewards are the total funds miners earn from the block subsidy and fees.</source>
-        <target>Bekijk XBT-blokbeloningen in LKY en USD in de loop van de tijd gevisualiseerd. Blokbeloningen zijn het totale bedrag dat mijnwerkers verdienen aan de bloksubsidie en vergoedingen.</target>
+        <source>See XBT block rewards in XBT and USD visualized over time. Block rewards are the total funds miners earn from the block subsidy and fees.</source>
+        <target>Bekijk XBT-blokbeloningen in XBT en USD in de loop van de tijd gevisualiseerd. Blokbeloningen zijn het totale bedrag dat mijnwerkers verdienen aan de bloksubsidie en vergoedingen.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-rewards-graph/block-rewards-graph.component.ts</context>
           <context context-type="linenumber">68</context>
@@ -5328,8 +5328,8 @@
         <note priority="1" from="description">liquid.non-dust-expired</note>
       </trans-unit>
       <trans-unit id="506d3b3e461d170c39745288b9ea96b9ac9b7f78" datatype="html">
-        <source>Total amount of LKY held in non-dust Federation UTXOs that have expired timelocks</source>
-        <target>Totale hoeveelheid LKY in niet-stof Federatie-UTXO's waarvan de tijdsloten zijn verlopen</target>
+        <source>Total amount of XBT held in non-dust Federation UTXOs that have expired timelocks</source>
+        <target>Totale hoeveelheid XBT in niet-stof Federatie-UTXO's waarvan de tijdsloten zijn verlopen</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/expired-utxos-stats/expired-utxos-stats.component.html</context>
           <context context-type="linenumber">5</context>
@@ -5363,8 +5363,8 @@
         <note priority="1" from="description">liquid.total-expired</note>
       </trans-unit>
       <trans-unit id="a1351919fe237825d7d5844cff22192f88bd1eb4" datatype="html">
-        <source>Total amount of LKY held in Federation UTXOs that have expired timelocks</source>
-        <target>Totaal aantal LKY in Federatie UTXO's waarvan de tijdsloten zijn verlopen</target>
+        <source>Total amount of XBT held in Federation UTXOs that have expired timelocks</source>
+        <target>Totaal aantal XBT in Federatie UTXO's waarvan de tijdsloten zijn verlopen</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/expired-utxos-stats/expired-utxos-stats.component.html</context>
           <context context-type="linenumber">15</context>
@@ -5537,8 +5537,8 @@
         <note priority="1" from="description">liquid.fund-redemption-tx</note>
       </trans-unit>
       <trans-unit id="4dbfcaee1d2f0308bd20b3b6b6655ba1e04330dc" datatype="html">
-        <source>LKY Address</source>
-        <target>LKY-adres</target>
+        <source>XBT Address</source>
+        <target>XBT-adres</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/recent-pegs-list/recent-pegs-list.component.html</context>
           <context context-type="linenumber">16</context>
@@ -5600,8 +5600,8 @@
         <note priority="1" from="description">liquid.unpeg</note>
       </trans-unit>
       <trans-unit id="52b32e9a8be459e6539a9b9214c2a17b23206a6c" datatype="html">
-        <source>Number of times that the Federation's LKY holdings fall below 95% of the total L-LKY supply</source>
-        <target>Aantal keren dat de LKY-bezit van de Federatie onder de 95% van het totale L-LKY-aanbod daalt</target>
+        <source>Number of times that the Federation's XBT holdings fall below 95% of the total L-XBT supply</source>
+        <target>Aantal keren dat de XBT-bezit van de Federatie onder de 95% van het totale L-XBT-aanbod daalt</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/reserves-ratio-stats/reserves-ratio-stats.component.html</context>
           <context context-type="linenumber">6</context>
@@ -5653,8 +5653,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="eb7a000cd340b44291d790f7b56f7b926edc275b" datatype="html">
-        <source>L-LKY in circulation</source>
-        <target>L-LKY in circulatie</target>
+        <source>L-XBT in circulation</source>
+        <target>L-XBT in circulatie</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/reserves-supply-stats/reserves-supply-stats.component.html</context>
           <context context-type="linenumber">3</context>
@@ -6405,13 +6405,13 @@
         <note priority="1" from="description">mining.fees-per-block-desc</note>
       </trans-unit>
       <trans-unit id="0705223420d290a218e4ed83bd4d904454a9cee8" datatype="html">
-        <source>LKY/block</source>
-        <target>LKY/blok</target>
+        <source>XBT/block</source>
+        <target>XBT/blok</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/reward-stats/reward-stats.component.html</context>
           <context context-type="linenumber">21</context>
         </context-group>
-        <note priority="1" from="description">LKY/block</note>
+        <note priority="1" from="description">XBT/block</note>
         <note priority="1" from="meaning">shared.btc-block</note>
       </trans-unit>
       <trans-unit id="cf3a97b1c1546b843411cfe101bc55ba2ac46bac" datatype="html">
@@ -7926,8 +7926,8 @@
         <note priority="1" from="description">liquid.federation-expired-utxos</note>
       </trans-unit>
       <trans-unit id="061051c88f1c686bcf3b40a81c8e824ef2ca7ae0" datatype="html">
-        <source>L-LKY Supply Against LKY Holdings</source>
-        <target>L-LKY-aanbod tegenover LKY-holdings</target>
+        <source>L-XBT Supply Against XBT Holdings</source>
+        <target>L-XBT-aanbod tegenover XBT-holdings</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/dashboard/dashboard.component.html</context>
           <context context-type="linenumber">184</context>
@@ -9480,8 +9480,8 @@
         <note priority="1" from="description">lightning.share</note>
       </trans-unit>
       <trans-unit id="meta.description.lightning.nodes-country-overview" datatype="html">
-        <source>See a geographical breakdown of the Lightning network: how many Lightning nodes are hosted in countries around the world, aggregate LKY capacity for each country, and more.</source>
-        <target>Bekijk een geografische uitsplitsing van het Lightning-netwerk: hoeveel Lightning-nodes er worden gehost in landen over de hele wereld, de totale LKY-capaciteit voor elk land, en meer.</target>
+        <source>See a geographical breakdown of the Lightning network: how many Lightning nodes are hosted in countries around the world, aggregate XBT capacity for each country, and more.</source>
+        <target>Bekijk een geografische uitsplitsing van het Lightning-netwerk: hoeveel Lightning-nodes er worden gehost in landen over de hele wereld, de totale XBT-capaciteit voor elk land, en meer.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-country-chart/nodes-per-country-chart.component.ts</context>
           <context context-type="linenumber">47</context>
@@ -9508,8 +9508,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="7032954508645880700" datatype="html">
-        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> LKY capacity</source>
-        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> LKY-capaciteit</target>
+        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> XBT capacity</source>
+        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> XBT-capaciteit</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-country-chart/nodes-per-country-chart.component.ts</context>
           <context context-type="linenumber">105</context>
@@ -9634,16 +9634,16 @@
         <note priority="1" from="description">lightning.top-100-isp-ln</note>
       </trans-unit>
       <trans-unit id="meta.description.lightning.nodes-per-isp" datatype="html">
-        <source>Browse the top 100 ISPs hosting Lightning nodes along with stats like total number of nodes per ISP, aggregate LKY capacity per ISP, and more</source>
-        <target>Blader door de top 100 ISP's die Lightning-nodes hosten, samen met statistieken zoals het totale aantal knooppunten per ISP, de totale LKY-capaciteit per ISP en meer</target>
+        <source>Browse the top 100 ISPs hosting Lightning nodes along with stats like total number of nodes per ISP, aggregate XBT capacity per ISP, and more</source>
+        <target>Blader door de top 100 ISP's die Lightning-nodes hosten, samen met statistieken zoals het totale aantal knooppunten per ISP, de totale XBT-capaciteit per ISP en meer</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-isp-chart/nodes-per-isp-chart.component.ts</context>
           <context context-type="linenumber">54</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3627306100664959238" datatype="html">
-        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> LKY</source>
-        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> LKY</target>
+        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> XBT</source>
+        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> XBT</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-isp-chart/nodes-per-isp-chart.component.ts</context>
           <context context-type="linenumber">164</context>
@@ -9761,8 +9761,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="meta.description.lightning.ranking.liquidity" datatype="html">
-        <source>See Lightning nodes with the most LKY liquidity deployed along with high-level stats like number of open channels, location, node age, and more.</source>
-        <target>Bekijk Lightning-nodes met de meeste LKY-liquiditeit, samen met statistieken op hoog niveau, zoals het aantal open kanalen, locatie, knooppuntleeftijd en meer.</target>
+        <source>See Lightning nodes with the most XBT liquidity deployed along with high-level stats like number of open channels, location, node age, and more.</source>
+        <target>Bekijk Lightning-nodes met de meeste XBT-liquiditeit, samen met statistieken op hoog niveau, zoals het aantal open kanalen, locatie, knooppuntleeftijd en meer.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-ranking/top-nodes-per-capacity/top-nodes-per-capacity.component.ts</context>
           <context context-type="linenumber">35</context>
